--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="container">
         <header class="grid header">Шапка страницы</header>       
         <main class="main">
-            <p>Основная часть</p>
+            <p class="p">Основная часть</p>
             <div class="maingrid">
-                <div class="add1">Еще1</div>
-                <div class="add2">Еще2</div>
-                <div class="add3">Еще3</div>
+                <div class="add">Еще1</div>
+                <div class="add">Еще2</div>
+                <div class="add large">Еще3</div>
             </div>
+            <aside class="aside">Боковая часть</aside>
         </main>
-        <aside class="grid aside">Боковая часть</aside>
         <footer class="grid footer">
             <div class="gridbasement">
             <div class="basement 1">Секция футера1</div>
